--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <div class="container  mx-auto">
+      <textarea
+        name=""
+        class="resize-none"
+        id=""
+        cols="30"
+        rows="10"
+      ></textarea>
+      <div
+        class="w-20 h-20 bg-rose-500 m-5 md:w-32 cursor-grab active:cursor-grabbing"
+      ></div>
+      <h1 class="bg-[#e3e344] w-3/4 mx-auto text-center">hello Tailwind</h1>
+      <h2
+        class="uppercase bg-red-400 font-mono text-5xl italic tabular-nums font-bold"
+      >
+        Lorem ipsum dolor sit.
+      </h2>
+      <h2 class="oldstyle-nums text-rose-600">3234242300042</h2>
+      <ol class="list-decimal ml-4">
+        <li>sdsdf</li>
+        <li>sdsdf</li>
+        <li>sdsdf</li>
+        <li>sdsdfv</li>
+      </ol>
+      <span class="inline-block align-baseline">sdkjbsdcb 😂</span>
+
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-6"
+      >
+        <p class=" ">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+        <p class="">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          inventore harum eligendi ullam ratione ipsa debitis fuga, impedit vero
+          laboriosam, distinctio cumque aperiam.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
